--- a/TECNICATURA_CuartoSemestre/JAVASCRIPT/E-Commerce2025/Client/media/index.html
+++ b/TECNICATURA_CuartoSemestre/JAVASCRIPT/E-Commerce2025/Client/media/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Document</title>
+    <title>E-Commerce</title>
 </head>
 <body>
     <!--shop content-->
@@ -13,7 +13,7 @@
         <div class="card-products" id="shopContent"></div>
     </div>
 
- <script src="/Users/mac/Desktop/CarpinchosProgramando_CuartoSemestre/TECNICATURA_CuartoSemestre/JAVASCRIPT/E-Commerce2025/Client/js/products.js"></script>
- <script src="/Users/mac/Desktop/CarpinchosProgramando_CuartoSemestre/TECNICATURA_CuartoSemestre/JAVASCRIPT/E-Commerce2025/Client/js/index.js"></script>
+<script src="../js/products.js"></script>
+<script src="../js/index.js"></script>
 </body>
 </html>
